fix nowrap

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -62,7 +62,7 @@
 	position: relative;
 	top: 10px;
 	font-size: 18px;
-	letter-spacing: 3.5px;
+	letter-spacing: 3px;
 }
 
 .title-after {
